--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <!-- Sección de Carga de Documentos -->
                     <div class="border-t border-gray-200 pt-8 mt-8">
                         <h3 class="text-xl font-semibold text-[#003366] mb-6">Cargue de Documentos</h3>
-                        <p class="text-gray-500 mb-6">Adjunte los siguientes documentos en formato PDF. Puede hacer clic o arrastrar los archivos a las cajas correspondientes.</p>
+                        <p class="text-gray-500 mb-6">Adjunte los siguientes documentos en formato PDF <strong>(Sin contraseñas)</strong>. Puede hacer clic o arrastrar los archivos a las cajas correspondientes.</p>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-6 gap-y-8">
                             
                             <!-- Documento de Identidad -->
