--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .file-drop-zone.dragover { background-color: #EBF8FF; border-color: #003366; }
         .loader { border: 4px solid #f3f3f3; border-top: 4px solid #003366; border-radius: 50%; width: 24px; height: 24px; animation: spin 1s linear infinite; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        #captchaCanvas { border: 1px solid #d1d5db; border-radius: 8px; background-color: #f9fafb; }
+        #captchaCanvas { border: 1px solid #d1d5db; border-radius: 8px; background-color: #f9fafb; cursor: pointer;}
     </style>
 </head>
 <body class="antialiased">
@@ -95,6 +95,7 @@
                 geoData = await response.json();
             } catch (error) {
                 console.error("Error cargando geodata.json:", error);
+                alert("Error crítico: No se pudo cargar la información de departamentos y ciudades. Por favor, recargue la página.");
             }
         }
         loadGeoData();
@@ -154,34 +155,38 @@
                                 <input type="text" id="direccion" name="direccion" class="input-field" required>
                             </div>
                             <!-- CAMPOS DE GEOLOCALIZACIÓN -->
-                            <div>
-                                <label for="pais" class="block text-sm font-medium text-gray-700 mb-1">País *</label>
-                                <select id="pais" name="pais" class="input-field" required>
-                                    <option value="Colombia">Colombia</option>
-                                    <option value="Otro">Otro</option>
-                                </select>
-                            </div>
-                            <div id="geo-colombia">
-                                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                            <div class="md:col-span-2">
+                                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                     <div>
-                                        <label for="departamento" class="block text-sm font-medium text-gray-700 mb-1">Departamento *</label>
-                                        <select id="departamento" name="departamento" class="input-field"></select>
+                                        <label for="pais" class="block text-sm font-medium text-gray-700 mb-1">País *</label>
+                                        <select id="pais" name="pais" class="input-field" required>
+                                            <option value="Colombia">Colombia</option>
+                                            <option value="Otro">Otro</option>
+                                        </select>
                                     </div>
-                                    <div>
-                                        <label for="ciudad" class="block text-sm font-medium text-gray-700 mb-1">Ciudad / Municipio *</label>
-                                        <select id="ciudad" name="ciudad" class="input-field"></select>
+                                    <div id="geo-colombia" class="md:col-span-2">
+                                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                            <div>
+                                                <label for="departamento" class="block text-sm font-medium text-gray-700 mb-1">Departamento *</label>
+                                                <select id="departamento" name="departamento" class="input-field"></select>
+                                            </div>
+                                            <div>
+                                                <label for="ciudad" class="block text-sm font-medium text-gray-700 mb-1">Ciudad / Municipio *</label>
+                                                <select id="ciudad" name="ciudad" class="input-field"></select>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div id="geo-otro" class="hidden">
-                                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                    <div>
-                                        <label for="paisManual" class="block text-sm font-medium text-gray-700 mb-1">País (Manual) *</label>
-                                        <input type="text" id="paisManual" name="paisManual" class="input-field">
-                                    </div>
-                                    <div>
-                                        <label for="ciudadManual" class="block text-sm font-medium text-gray-700 mb-1">Ciudad (Manual) *</label>
-                                        <input type="text" id="ciudadManual" name="ciudadManual" class="input-field">
+                                    <div id="geo-otro" class="hidden md:col-span-2">
+                                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                            <div>
+                                                <label for="paisManual" class="block text-sm font-medium text-gray-700 mb-1">País (Manual) *</label>
+                                                <input type="text" id="paisManual" name="paisManual" class="input-field">
+                                            </div>
+                                            <div>
+                                                <label for="ciudadManual" class="block text-sm font-medium text-gray-700 mb-1">Ciudad (Manual) *</label>
+                                                <input type="text" id="ciudadManual" name="ciudadManual" class="input-field">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -273,8 +278,8 @@
                         <h3 class="text-xl font-semibold text-[#003366] mb-6">Verificación de Seguridad</h3>
                         <div class="flex flex-col sm:flex-row items-center gap-6 p-4 bg-gray-50 rounded-lg">
                             <div class="relative">
-                                <canvas id="captchaCanvas" width="200" height="50"></canvas>
-                                <button type="button" id="reload-captcha" class="absolute top-1 right-1 p-1 text-gray-500 hover:text-gray-800">
+                                <canvas id="captchaCanvas" width="200" height="50" title="Haga clic para generar una nueva operación"></canvas>
+                                <button type="button" id="reload-captcha" class="absolute top-1 right-1 p-1 text-gray-500 hover:text-gray-800" title="Generar nueva operación">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                         <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 110 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd" />
                                     </svg>
@@ -323,6 +328,7 @@
                 setupGeoFields();
                 setupCaptcha();
                 document.getElementById('reload-captcha').addEventListener('click', setupCaptcha);
+                document.getElementById('captchaCanvas').addEventListener('click', setupCaptcha);
             }
         };
 
@@ -345,11 +351,11 @@
         // Lógica del CAPTCHA
         function setupCaptcha() {
             const canvas = document.getElementById('captchaCanvas');
+            if (!canvas) return;
             const ctx = canvas.getContext('2d');
-            const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-            const fonts = ['Poppins', 'Arial', 'Courier New', 'Georgia', 'Times New Roman'];
+            const fonts = ['Poppins', 'Arial', 'Courier New', 'Georgia'];
             
-            const num1 = Math.ceil(Math.random() * 9);
+            const num1 = Math.ceil(Math.random() * 9) + 1;
             const num2 = Math.ceil(Math.random() * 9);
             const operators = ['+', '-', 'x'];
             const operator = operators[Math.floor(Math.random() * operators.length)];
@@ -370,17 +376,17 @@
             // Dibuja el texto con distorsión
             for (let i = 0; i < question.length; i++) {
                 ctx.save();
-                ctx.font = `${Math.random() * 10 + 25}px ${fonts[Math.floor(Math.random() * fonts.length)]}`;
-                ctx.fillStyle = `rgb(${Math.random()*150}, ${Math.random()*150}, ${Math.random()*150})`;
-                ctx.translate(20 + i * 25, canvas.height/2 + (Math.random() * 10 - 5));
-                ctx.rotate((Math.random() - 0.5) * 0.4);
+                ctx.font = `${Math.random() * 12 + 28}px ${fonts[Math.floor(Math.random() * fonts.length)]}`;
+                ctx.fillStyle = `rgb(${Math.random()*120}, ${Math.random()*120}, ${Math.random()*120})`;
+                ctx.translate(20 + i * 28, canvas.height/2 + (Math.random() * 15 - 7.5));
+                ctx.rotate((Math.random() - 0.5) * 0.5);
                 ctx.fillText(question[i], 0, 0);
                 ctx.restore();
             }
 
             // Dibuja ruido de fondo
-            for (let i = 0; i < 10; i++) {
-                ctx.strokeStyle = `rgba(${Math.random()*200}, ${Math.random()*200}, ${Math.random()*200}, 0.5)`;
+            for (let i = 0; i < 8; i++) {
+                ctx.strokeStyle = `rgba(${Math.random()*150}, ${Math.random()*150}, ${Math.random()*150}, 0.3)`;
                 ctx.beginPath();
                 ctx.moveTo(Math.random() * canvas.width, Math.random() * canvas.height);
                 ctx.lineTo(Math.random() * canvas.width, Math.random() * canvas.height);
@@ -391,6 +397,8 @@
         // Lógica de Campos Geográficos
         function setupGeoFields() {
             const paisSelect = document.getElementById('pais');
+            if (!paisSelect) return;
+
             const geoColombiaDiv = document.getElementById('geo-colombia');
             const geoOtroDiv = document.getElementById('geo-otro');
             const departamentoSelect = document.getElementById('departamento');
@@ -417,7 +425,10 @@
             }
             
             function populateDepartamentos() {
-                if (!geoData.departamentos) return;
+                if (!geoData.departamentos) {
+                    setTimeout(populateDepartamentos, 200); // Reintentar si los datos no han cargado
+                    return;
+                }
                 departamentoSelect.innerHTML = '<option value="">Seleccione...</option>';
                 geoData.departamentos.forEach(depto => {
                     const option = document.createElement('option');
