--- a/index.html
+++ b/index.html
@@ -1,81 +1,255 @@
-<script>
-  // Año actual en el footer
-  document.getElementById("currentYear").textContent = new Date().getFullYear();
+<!DOCTYPE html>
+<html lang="es" class="scroll-smooth">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portal de Proveedores - Fundación IDI</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        background-color: #f8f7f2;
+        color: #4a4a4a;
+      }
 
-  let geoData = {};
-  let captchaSolution = 0;
+      .btn-brand {
+        background-color: #003366;
+        color: white;
+        padding: 16px 32px;
+        border-radius: 9999px;
+        font-weight: 600;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
 
-  // Cargar los datos geográficos una sola vez
-  async function loadGeoData() {
-    try {
-      // *** CORRECCIÓN: uso de ruta relativa válida y manejo seguro ***
-      const response = await fetch("./geodata.json");
-      if (!response.ok) throw new Error(`Error HTTP ${response.status} al cargar geodata.json`);
-      geoData = await response.json();
-      console.log("geodata.json cargado correctamente");
-    } catch (error) {
-      console.error("Error crítico al cargar geodata.json:", error);
-      geoData = { departamentos: [] }; // estructura vacía para fallback seguro
-    }
-    return geoData;
-  }
+      .btn-brand:hover {
+        background-color: #002244;
+        transform: translateY(-2px);
+        box-shadow: 0 7px 14px rgba(0, 0, 0, 0.1);
+      }
 
-  // Espera de carga
-  const geoDataPromise = loadGeoData();
+      .card {
+        background-color: white;
+        border-radius: 24px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+        transition: all 0.3s ease-in-out;
+      }
 
-  // -----------------------------------------------------------------
-  // (El resto de tu código original no se modifica en absoluto)
-  // -----------------------------------------------------------------
+      .card-option {
+        cursor: pointer;
+        border: 2px solid transparent;
+      }
 
-  const selectionContainer = document.getElementById("selection-container");
-  const formContainer = document.getElementById("form-container");
-  const selectNatural = document.getElementById("select-natural");
-  const selectJuridica = document.getElementById("select-juridica");
+      .card-option:hover {
+        transform: translateY(-5px);
+        border-color: #003366;
+        box-shadow: 0 15px 30px rgba(0, 51, 102, 0.1);
+      }
 
-  async function showForm(formHTML) {
-    selectionContainer.classList.add("hidden");
-    formContainer.innerHTML = formHTML;
-    formContainer.classList.remove("hidden");
-    window.scrollTo({ top: 0, behavior: "smooth" });
+      .file-drop-zone {
+        border: 2px dashed #d1d5db;
+        border-radius: 12px;
+        padding: 2rem;
+        text-align: center;
+      }
+      .file-drop-zone.dragover {
+        background-color: #ebf8ff;
+        border-color: #003366;
+      }
 
-    // *** CORRECCIÓN: asegura que geodata esté disponible antes de llamar setupGeoFields ***
-    await geoDataPromise;
-    setupGeoFields();
-  }
+      .loader {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #003366;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        animation: spin 1s linear infinite;
+      }
 
-  function setupGeoFields() {
-    const paisSelect = document.getElementById("pais");
-    const departamentoSelect = document.getElementById("departamento");
-    const ciudadSelect = document.getElementById("ciudad");
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+  </head>
 
-    if (!geoData || !geoData.departamentos) {
-      console.error("geodata.json no contiene la estructura esperada.");
-      return;
-    }
+  <body class="antialiased">
+    <header class="bg-white py-6 shadow-sm">
+      <div class="max-w-6xl mx-auto flex justify-between items-center px-4">
+        <img src="logoprincipal.png" alt="Logo Fundación IDI" class="h-12" />
+      </div>
+    </header>
 
-    departamentoSelect.innerHTML = '<option value="">Seleccione...</option>';
-    geoData.departamentos.forEach((d) => {
-      const option = document.createElement("option");
-      option.value = d.departamento;
-      option.textContent = d.departamento;
-      departamentoSelect.appendChild(option);
-    });
+    <main class="py-12 sm:py-20">
+      <div id="selection-container" class="text-center">
+        <h1
+          class="text-4xl sm:text-5xl font-bold text-[#003366] tracking-tight"
+        >
+          Portal de Registro de Proveedores
+        </h1>
+        <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">
+          Bienvenido. Para iniciar su proceso de inscripción o actualización de
+          datos, por favor seleccione el tipo de proveedor que corresponde.
+        </p>
 
-    departamentoSelect.addEventListener("change", () => {
-      const selectedDept = geoData.departamentos.find(
-        (dep) => dep.departamento === departamentoSelect.value
-      );
-      ciudadSelect.innerHTML = '<option value="">Seleccione...</option>';
-      if (selectedDept) {
-        selectedDept.ciudades.forEach((city) => {
-          const option = document.createElement("option");
-          option.value = city;
-          option.textContent = city;
-          ciudadSelect.appendChild(option);
+        <div
+          class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 max-w-3xl mx-auto"
+        >
+          <div
+            id="select-natural"
+            class="card card-option p-8 text-center cursor-pointer"
+          >
+            <h2 class="mt-6 text-2xl font-bold text-gray-800">
+              Persona Natural
+            </h2>
+            <p class="mt-2 text-gray-500">
+              Profesionales independientes o contratistas.
+            </p>
+          </div>
+
+          <div
+            id="select-juridica"
+            class="card card-option p-8 text-center cursor-pointer"
+          >
+            <h2 class="mt-6 text-2xl font-bold text-gray-800">
+              Persona Jurídica
+            </h2>
+            <p class="mt-2 text-gray-500">
+              Empresas y entidades legalmente constituidas.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div id="form-container" class="mt-16 hidden"></div>
+    </main>
+
+    <footer class="bg-white mt-20 border-t text-center text-gray-500 py-6">
+      <p>
+        &copy; <span id="currentYear"></span> Fundación IDI. Todos los derechos
+        reservados.
+      </p>
+    </footer>
+
+    <script>
+      document.getElementById("currentYear").textContent =
+        new Date().getFullYear();
+
+      let geoData = {};
+
+      // CORRECCIÓN DEL CARGADO DE GEODATA
+      async function loadGeoData() {
+        try {
+          const response = await fetch("./geodata.json");
+          if (!response.ok)
+            throw new Error("Error al cargar geodata.json:" + response.status);
+          geoData = await response.json();
+          console.log("GeoData cargado correctamente");
+        } catch (error) {
+          console.error("Error crítico al cargar geodata.json:", error);
+          geoData = { departamentos: [] };
+        }
+        return geoData;
+      }
+
+      const geoDataPromise = loadGeoData();
+
+      const selectionContainer = document.getElementById("selection-container");
+      const formContainer = document.getElementById("form-container");
+      const selectNatural = document.getElementById("select-natural");
+      const selectJuridica = document.getElementById("select-juridica");
+
+      async function showForm(formHTML) {
+        selectionContainer.classList.add("hidden");
+        formContainer.innerHTML = formHTML;
+        formContainer.classList.remove("hidden");
+        window.scrollTo({ top: 0, behavior: "smooth" });
+
+        await geoDataPromise;
+        setupGeoFields();
+      }
+
+      function setupGeoFields() {
+        const paisSelect = document.getElementById("pais");
+        const departamentoSelect = document.getElementById("departamento");
+        const ciudadSelect = document.getElementById("ciudad");
+
+        departamentoSelect.innerHTML = '<option value="">Seleccione...</option>';
+        if (!geoData.departamentos) return;
+
+        geoData.departamentos.forEach((d) => {
+          const opt = document.createElement("option");
+          opt.value = d.departamento;
+          opt.textContent = d.departamento;
+          departamentoSelect.appendChild(opt);
+        });
+
+        departamentoSelect.addEventListener("change", () => {
+          const depto = geoData.departamentos.find(
+            (dd) => dd.departamento === departamentoSelect.value
+          );
+          ciudadSelect.innerHTML = '<option value="">Seleccione...</option>';
+          if (depto) {
+            depto.ciudades.forEach((c) => {
+              const option = document.createElement("option");
+              option.value = c;
+              option.textContent = c;
+              ciudadSelect.appendChild(option);
+            });
+          }
         });
       }
-    });
-  }
 
-  // (Aquí sigue exactamente todo tu código original del CAPTCHA, drag & drop, envío, etc.)
-</script>
+      selectNatural.addEventListener("click", () => {
+        showForm(`
+          <div class="card p-8">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">
+              Formulario Persona Natural
+            </h2>
+            <form id="natural-form" novalidate>
+              <label
+                class="block text-gray-700 font-medium mb-1"
+                for="pais"
+                >País</label
+              >
+              <select id="pais" class="input-field">
+                <option value="Colombia">Colombia</option>
+                <option value="Otro">Otro</option>
+              </select>
+
+              <label
+                class="block text-gray-700 font-medium mt-4 mb-1"
+                for="departamento"
+                >Departamento</label
+              >
+              <select id="departamento" class="input-field"></select>
+
+              <label
+                class="block text-gray-700 font-medium mt-4 mb-1"
+                for="ciudad"
+                >Ciudad</label
+              >
+              <select id="ciudad" class="input-field"></select>
+            </form>
+          </div>
+        `);
+      });
+
+      selectJuridica.addEventListener("click", () => {
+        showForm(
+          "<div class='card p-8 text-center'>Formulario Persona Jurídica (en construcción)</div>"
+        );
+      });
+    </script>
+  </body>
+</html>
